--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,32 @@
 /* Importation font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,500&display=swap');
 
+/* Changement de couleur de la scrollbar */
+/* taille de la scrollbar */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+main {
+    min-height: 45%;
+    position: relative;
+}
+
+/* couleur de fond secondaire de la scrollbar */
+::-webkit-scrollbar-track {
+    background: #b6a397;
+}
+
+/* couleur de fond primaire de la scrollbar */
+::-webkit-scrollbar-thumb {
+    background: #c1784a;
+}
+
+/* Hcouleur de fond primaire de la scrollbar au hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #cf8e66;
+}
+
 /* Style généraux */
 a {
     color: inherit;
@@ -138,7 +164,6 @@ nav .links li:nth-child(-n + 3) a:hover::after {
 
 /* accueil.php css */
 
-/* Section Hero CSS */
 .hero {
     height: 100vh;
     display: flex;
@@ -147,12 +172,11 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     flex-direction: column;
     position: relative;
     color: #fff;
-    background-image: url(Images/pexels-ylanite-koppens-776654.jpg);
+    background-image: url(../Images/pexels-ylanite-koppens-776654.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-/* Div Hero-text CSS */
 .hero .hero-text {
     position: absolute;
     text-align: center;
@@ -169,7 +193,6 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     margin-bottom: 3%;
 }
 
-/* Div Hero-form CSS */
 .hero .hero-form {
     background-color: #222;
     padding: 30px;
@@ -193,6 +216,10 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     width: 20%;
 }
 
+.hero .hero-form form input::placeholder {
+    color: #dbd8d8;
+}
+
 .hero .hero-form form label {
     color: #fff;
     margin-bottom: 10px;
@@ -208,7 +235,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     color: #fff;
 }
 
-::-webkit-calendar-picker-indicator {
+.hero .hero-form form input[type="date"]::-webkit-calendar-picker-indicator {
     filter: invert(1);
 }
 
@@ -240,21 +267,72 @@ nav .links li:nth-child(-n + 3) a:hover::after {
 }
 
 .title {
-    margin: 40px 0;
-    color: #dc976c;
-    font-weight: bold;
+    margin-bottom: 20px;
     position: relative;
-    margin-left: 15px;
 }
 
-.title::after {
-    position: absolute;
-    left: -15px;
-    content: "";
-    height: 100%;
-    background-color: #fff;
-    width: 5px;
+.title span {
+    font-size: 2rem;
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    color: #d6a587;
 }
+
+.title span::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transform: translateY(-100%);
+    background: #cf7f66;
+    animation: slide-in 1.3s ease-out forwards,
+        slide-out 1.3s 0.7s ease-out forwards;
+}
+
+@keyframes slide-in {
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+@keyframes slide-out {
+    100% {
+        transform: translateY(95%)
+    }
+}
+
+.typing-text {
+    word-wrap: break-word;
+    color: #fff;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+}
+
+.typing-text span {
+    display: block;
+    color: #fff;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+    animation: typing 2.5s steps(40, end) forwards;
+}
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+
 
 /* Section prochains évènements CSS */
 .prochains-evenements {
@@ -277,19 +355,29 @@ nav .links li:nth-child(-n + 3) a:hover::after {
 }
 
 .btn-slide {
-    width: 58px;
-    height: 58px;
+    position: absolute;
+    z-index: 999;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #000;
+    width: 48px;
+    height: 48px;
     border-radius: 100%;
-    background-color: #131111;
+    background-color: #3b3434;
     border: solid 1px;
 }
 
 .btn-slide:hover {
-    background-color: #1f1b1b;
+    background-color: #524747;
 }
 
 .btn-left {
     transform: scale(-1);
+    left: 10px;
+}
+
+.btn-right {
+    right: 10px;
 }
 
 .link-see-all {
@@ -303,32 +391,73 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     color: #fff;
 }
 
-/* Card section prochains et nouveaux evenements */
-.card {
+/* Slider section prochains evenements */
+
+/* Modification du style par défault du plugin OwlCarousel */
+.owl-nav {
+    font-size: 2rem;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
-    gap: 32px;
-    width: 100%;
-    overflow: hidden;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    -ms-overflow-style: none;
-    /* Internet Explorer 10+ */
-    scrollbar-width: none;
-    /* Firefox */
+    flex-direction: row;
+    justify-content: center;
+    gap: 101%;
+    z-index: -500;
 }
 
+.owl-prev span,
+.owl-next span {
+    font-size: 3rem;
+    font-weight: 150;
+}
+
+.owl-item .item {
+    padding-bottom: 6%;
+    height: 700px;
+}
+
+
+/* Slider section nouveaux événements */
+.slider {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+
+.card {
+    display: flex;
+    transition: transform 2.7s;
+    overflow-y: hidden;
+    gap: 32px;
+    width: 90%;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+}
+
+
 .card::-webkit-scrollbar {
-    display: none;
     /* Safari and Chrome */
+    display: none;
 }
 
 .card-container {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    width: 100%;
     max-width: 300px;
+    height: 700px;
     position: relative;
-    background-color: #131111;
+    background-color: #161414;
     border-radius: 15px;
-    padding: 2rem 2rem 7rem 2rem;
+    padding: 2rem 2rem 2rem 2rem;
     color: #d7d3d3;
+    justify-content: space-between;
 }
 
 .card-container:hover {
@@ -344,12 +473,6 @@ nav .links li:nth-child(-n + 3) a:hover::after {
 .card-content_title {
     font-size: 1.375rem;
     color: #fff;
-}
-
-.card-content_otherinfo {
-    bottom: 25px;
-    width: 80%;
-    position: absolute;
 }
 
 .card-container .card-content_otherinfo .flex-row {
@@ -519,7 +642,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     background-color: #131111;
     border-top: 1px solid #1f1b1b;
     color: #fff;
-    margin-top: 200px;
+    margin-top: 180px;
 }
 
 .footer>* {
@@ -577,6 +700,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
 .footer li a::after {
     content: "";
     position: absolute;
+    outline: none;
     left: 0;
     width: 100%;
     height: 2px;
@@ -702,6 +826,9 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     border: none;
 }
 
+.filter-form input::placeholder {
+    color: #000;
+}
 
 .filter-form h1 {
     margin: 30px 10px 0 10px;
@@ -720,13 +847,15 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     background-color: transparent;
     transition: 0.5s;
     padding: 8px 4px 8px 4px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     font-size: 1.15rem;
     border-radius: 10%;
     width: fit-content;
+    transition: background-color, transform .5s ease-out;
 }
 
 .filter-form input[type="submit"]:hover {
+    transform: scale(1.1);
     box-shadow: 0 0 10px #c1784a;
 }
 
@@ -739,21 +868,23 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     flex-direction: column;
 }
 
-.filter-div button[type="submit"] {
+.filter-div .btn-delete-filter {
     align-self: center;
     background-color: rgb(197, 0, 0);
     color: #fff;
     cursor: pointer;
     padding: 6px 4px 6px 4px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    border-radius: 5%;
     font-size: 1rem;
     border: none;
     width: fit-content;
-    transition: background-color 1s ease-in-out;
+    transition: background-color, transform .5s ease-out;
 }
 
-.filter-div button[type="submit"]:hover {
+.filter-div .btn-delete-filter:hover {
     background-color: rgb(153, 15, 15);
+    transform: scale(1.1);
 
 }
 
@@ -767,6 +898,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     margin: 2px 0 2px 0;
     border: 1px solid;
     border-radius: 5px;
+    scroll-margin-top: 200px;
 }
 
 
@@ -799,7 +931,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     margin-right: 5px;
 }
 
-button[type="submit"]:hover {
+.recherche button[type="submit"]:hover {
     opacity: 1;
 }
 
@@ -808,9 +940,12 @@ button[type="submit"]:hover {
     position: relative;
     flex-wrap: wrap;
     gap: 10px;
-    top: 60px;
+    top: 30px;
 }
 
+.card-evenement .card-container {
+    margin-bottom: 30px;
+}
 
 .dropdown {
     position: relative;
@@ -851,7 +986,6 @@ button[type="submit"]:hover {
     cursor: pointer;
     font-size: 1rem;
     border: none;
-    outline: none;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
     padding: 12px 20px;
     border-radius: 5px;
@@ -865,7 +999,6 @@ button[type="submit"]:hover {
     color: #000;
     background: #fff;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
-    overflow: hidden;
     display: none;
     border-radius: 0 0 5px 5px;
 }
@@ -950,6 +1083,43 @@ button[type="submit"]:hover {
     align-items: center
 }
 
+.custom-select-wrapper {
+    position: relative;
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.custom-select, .add-participant {
+    background-color: rgb(230, 228, 228);
+    border: none;
+    border: 1px solid #7e7c7c;
+    padding: 3px 10px;
+    font-size: 14px;
+    color: #333;
+    width: 200px;
+}
+
+.custom-select:focus, .add-participant:focus {
+    border-bottom: 1px solid #555;
+}
+
+/* Style pour les options */
+.custom-select option, .add-participant option {
+    background-color: #f2f2f2;
+    color: #333;
+}
+
+/* Style pour l'option sélectionnée */
+.custom-select option:checked, .add-participant option:checked {
+    background-color: #c1784a;
+    color: #fff;
+}
+
+.btn-add-panier {
+    padding: 4px 4px;
+    border: none;
+}
+
 .bloc-ajout-infos {
     margin-bottom: 5px;
     line-height: 20px;
@@ -960,9 +1130,9 @@ button[type="submit"]:hover {
 .message {
     position: absolute;
     font-size: 1rem;
-    padding: 1% 3%;
+    padding: 1% 2%;
     left: 50%;
-    top: 10%;
+    top: 12%;
     z-index: 999;
     border-radius: 3%;
     transform: translate(-50%, -50%);
@@ -979,6 +1149,13 @@ button[type="submit"]:hover {
 }
 
 /* Style CSS de la page Panier.php */
+.panier-empty {
+    position: relative;
+    top: 20vh;
+    width: 80%;
+    margin: 0 auto;
+}
+
 .panier {
     position: relative;
     top: 12vh;
@@ -1036,13 +1213,13 @@ th, td {
     text-align: right;
 }
 
-.form-delete-produit button[type="submit"] {
+.form-delete-produit button {
     all: unset;
     cursor: pointer;
     text-align: center;
 }
 
-.form-delete-produit button[type="submit"] img {
+.form-delete-produit button img {
     max-width: 40%;
     align-self: center;
     transition: all 0.3s ease-in-out;
@@ -1050,7 +1227,7 @@ th, td {
 
 }
 
-.form-delete-produit button[type="submit"] img:hover {
+.form-delete-produit button img:hover {
     transform: scale(1.1);
     filter: brightness(100%);
 }
@@ -1063,13 +1240,11 @@ th, td {
     cursor: pointer;
 }
 
-.form-delete-panier {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
-
-.form-delete-panier .btn-delete-panier {
+.btn-delete-panier {
+    display: block;
+    width: fit-content;
+    text-align: center;
+    margin: 0 auto;
     background-color: rgb(138, 61, 61);
     border: 1px;
     border-radius: 5%;
@@ -1078,17 +1253,12 @@ th, td {
     transition: background-color, transform .6s ease-out;
 }
 
-.form-delete-panier .btn-delete-panier:hover {
-    transform: scale(1.2);
-    background-color: rgb(177, 96, 96);
+.btn-delete-panier:hover {
+    transform: scale(1.1);
+    background-color: rgb(156, 82, 82);
 }
 
-.panier a {
-    color: #e4a984;
-    text-decoration: underline;
-}
-
-/* CSS de ma div (modal) reservinfo*/
+/* CSS de ma div (modal) reservinfo */
 .reservinfo {
     position: fixed;
     flex-direction: column;
@@ -1101,9 +1271,7 @@ th, td {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 50vh;
-    width: 60%;
-    text-align: center;
+    width: 50%;
     align-items: center;
 }
 
@@ -1114,24 +1282,6 @@ th, td {
     width: 32px;
     height: 32px;
     opacity: 0.7;
-}
-
-.form-reservation {
-    display: flex;
-    flex-direction: column;
-}
-
-
-.btn-reserv-submit {
-    padding: 8px;
-    font-size: 1.225rem;
-    margin: 10px 0 10px 0;
-    border-radius: 15px;
-    transition: background-color 1s ease-out;
-}
-
-.btn-reserv-submit:hover {
-    background-color: #ffd3b8;
 }
 
 .reservinfo .closeReservInfo:before, .closeReservInfo:after {
@@ -1148,13 +1298,51 @@ th, td {
     cursor: pointer;
 }
 
-
 .reservinfo .closeReservInfo:before {
     transform: rotate(45deg);
 }
 
 .reservinfo .closeReservInfo:after {
     transform: rotate(-45deg);
+}
+
+.form-reservation {
+    margin-top: 20px;
+    position: relative;
+}
+
+.form-reservation label {
+    color: white;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-reservation input {
+    width: 100%;
+    padding: 4px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.form-reservation input[type="submit"] {
+    background-color: rgb(36, 36, 36);
+    color: white;
+    padding: 10px 20px;
+    border: solid 2px rgb(211, 207, 207);
+    cursor: pointer;
+    margin-top: 20px;
+    transition: border .3s ease-out;
+}
+
+.form-reservation input[type="submit"]:hover {
+    border: solid 10px rgb(211, 207, 207);
+    border-width: 2px 2px 10px 10px;
+}
+
+
+.reservinfo .prix-totalReservation {
+    font-weight: bold;
 }
 
 .modal-invisible {
@@ -1164,4 +1352,35 @@ th, td {
 
 .modal-visible {
     visibility: visible;
+}
+
+.link-to-evenement {
+    text-decoration: none;
+    position: relative;
+    font-size: 1.5rem;
+    color: #e2c5b4;
+    display: inline-block;
+    /* Couleur du lien */
+    text-decoration: none;
+}
+
+.link-to-evenement::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    /* Position de la ligne par rapport au lien */
+    width: 0;
+    /* Définit la largeur initiale de la ligne à 0 */
+    height: 2px;
+    /* Épaisseur de la ligne */
+    background-color: #e2c5b4;
+    /* Couleur de la ligne */
+    transition: width 0.3s ease-in-out;
+    /* Ajoute une transition fluide à l'effet */
+}
+
+.link-to-evenement:hover::after {
+    width: 100%;
+    /* Au survol, agrandit la largeur de la ligne à 100%, la ligne s'étend de gauche à droite */
 }
