--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,10 @@
 /* Importation font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,500&display=swap');
 
-/* Changement de couleur de la scrollbar */
+/* Changement du style de la scrollbar */
 /* taille de la scrollbar */
 ::-webkit-scrollbar {
     width: 12px;
-}
-
-main {
-    min-height: 45%;
-    position: relative;
 }
 
 /* couleur de fond secondaire de la scrollbar */
@@ -31,6 +26,11 @@ main {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+main {
+    min-height: 45%;
+    position: relative;
 }
 
 /* Skip link */
@@ -437,6 +437,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     width: 90%;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
+    scrollbar-width: none;
 }
 
 
@@ -521,7 +522,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     background-color: rgb(226, 7, 7);
     color: white;
     padding: 8px;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: bold;
 }
 
@@ -840,6 +841,12 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     font-size: 1.2rem;
 }
 
+.filter-form input[type="number"] {
+    width: 100%;
+    padding: 1px;
+    box-sizing: border-box;
+}
+
 .filter-form input[type="submit"] {
     align-self: center;
     color: #fff;
@@ -1094,7 +1101,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     border: none;
     border: 1px solid #7e7c7c;
     padding: 3px 10px;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #333;
     width: 200px;
 }
@@ -1168,7 +1175,7 @@ nav .links li:nth-child(-n + 3) a:hover::after {
     margin-bottom: 40px;
 }
 
-.title-card {
+.title-panier {
     display: flex;
     color: #fff;
     padding: 0 0 17px 0;
@@ -1323,6 +1330,10 @@ th, td {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+
+.form-reservation label span {
+    font-size: 0.875rem;
 }
 
 .form-reservation input[type="submit"] {
